<resources>
    <string name="app_name">WisataTabanan</string>
    <string name="name_tourism">Name</string>
    <string name="location_tourism">Lokasi</string>
    <string name="toruism_detail_bedugul">Objek wisata di Tabanan ini menyuguhkan kombinasi pemandangan alam danau, pura Ulun Danu dan juga bukit-bukit indah yang mengelilingi tepi danau Beratan. Perpaduan alam pegunungan tersebut, tersaji sempurna menyajikan gambar alam nyata yang  instagramable dan spektakuler, sehingga Ulun Danu Beratan Bedugul menjadi salah satu tempat hits dan populer wajib untuk dikunjungi saat mengagendakan tour di pulau Bali. Berada pada dataran tinggi 1.239 mdpl, membuatnya berhawa sejuk, berbagai jenis tanaman serta buah bisa berkembang baik di kawasan ini, salah satu yang terkenal adalah tanaman strawberry, sayur mayur seperti wortel, kol, tomat dan sawi.</string>
    <string name="toruism_detail_tanahlot">Siapa yang tidak mengenal objek wisata di Tabanan ini, hampir setiap wisatawan pertama kali ke pulau Bali wajib berkunjung ke tempat wisata ini, sehingga menjadikannya sebagai destinasi wisata yang paling hits dan populer di pulau Bali. Waktu yang tepat untuk berkunjung ke Tanah Lot ini adalah pada sore hari untuk menyaksikan alam sunset. Wilayah pesisir ini menghadirkan pemandangan pura yang terletak di atas bongkahan batu karang besar di tengah pantai, berlatar belakang samudera Hindia, pura ini terlihat spektakuler, semakin sempurna dan instagramable lagi tatkala sang surya mulai tenggelam. Sebuah pura lainnya bertengger di ujung batu karang dan tak kalah menariknya seolah dihubungkan oleh jembatan batu karang dengan daratan. Taman-taman juga tertata rapi berpadu serasi menampilkan keindahan.</string>
    <string name="tourism_detail_alaskedaton">Sebuah kawasan hutan lindung yang dihuni oleh ratusan kera jinak, objek wisata di Tabanan ini dikenal dengan monkey forest Alas Kedaton, kunjungan ke kawasan ini biasanya dirangkai dalam perjalanan tour menuju Bedugul dan Tanah Lot karena berada dalam satu jalur perjalanan. Selain kera-kera jinak ada juga puluhan kalong yang hidup bergelantungan di dahan pohon, dan juga sebuah pura merupakan peninggalan Bali Kuno. Berkunjung ke Alas Kedaton, walaupun kera-kera tersebut jinak, jangan coba-coba mengganggu mereka, karena bisa saja mereka agresif. Ikutilah saran dari guide setempat yang sudah paham dengan perilaku kera di sini.</string>
    <string name="tourism_detail_butterflypark">Objek wisata di Tabanan ini tergolong cukup spesial, membudidayakan berbagai jenis kupu-kupu, sebuah jenis hewan dengan bahasa ilmiah Rhopalocera tergolong serangga dalam bangsa serangga dengan saya bersisik atau dikenal dengan Ordo Lepidoptera. Taman kupu-kupu atau Bali Butterfly Park ini berdiri di atas lahan 1 hektar, lengkap dengan parkir luas, museum, restaurant dan taman bunga yang dipenuhi ribuan kupu-kupu. Taman bunga ini ditutup atau beratapkan jaring, sehingga kupu-kupu tidak terbang keluar. Koleksinya cukup lengkap, salah satu yang terkenal adalah kupu-kupu sayap Burung Sorga atau Omithoptera Paradisea, anda bisa berphoto bahkan juga membiarkan bertengger di tangan anda. Di pulau Bali sendiri terdapat sejumlah Taman Kupu-kupu tetapi yang di Tabanan ini menjadi destinasi tour yang hits dan populer.</string>
    <string name="tourism_detail_pantaisoka">Objek wisata pantai ini terletak di desa Antap, Kecamatan Selemadeg, Kabupaten Tabanan. Lokasinya sendiri mudah untuk diakses, berada di pinggir jalan raya utama Denpasar-Gilimanuk, sehingga tempat ini bisa menjadi tempat peristirahatan sementara jika anda saat perjalanan jauh dari jawa. Di kawasan ini juga terdapat restaurant yang menyuguhkan keindahan alam pantai Soka. Objek wisata di Tabanan ini bisa menjadi tujuan tour di Bali yang istimewa, ketika anda mengagendakan tour ke arah Bali Barat, suasana alam pantainya tenang dengan suguhan laut biru, bebatuan di pinggir pantai bisa menjadi tempat bersantai atau bermain air laut. Bias cahaya matahari tenggelam, menambah pesona keindadahan tempat ini, masih sepi pengunjung, sehingga anda yang butuh tempat damai  bisa menjadikan pantai Soka sebagai tujuan tour selanjutnya.</string>
    <string name="tourism_detail_pantaikelanting">Pantai Kelating terletak di Desa Kelating, Kecamatan Kerambitan, Kabupaten Tabanan, kurang lebih 13 km dari kota Tabanan. Jarak tempuh dari Kota Denpasar sekitar 33 km dan anda hanya membutuhkan waktu sekitar 70 menit saja dari Bandara Ngurah Rai untuk mencapai objek wisata Pantai Kelating ini. Dari Bandara, anda tinggal melalui jalan Sunset Road, kemudian ke arah Kerobokan untuk menuju Mengwi. Setelah itu anda tinggal mengikuti jalan ke Tabanan yang menuju ke Kecamatan Kerambitan. Dalam perjalanan menuju Pantai Kelating anda akan dihadapkan dengan pemandangan hamparan sawah yang hijau. Jalanan yang telah beraspal dengan baik juga akan membuat perjalanan anda terasa menajadi lebih menyenangkan. Jika anda ingin menyewa kendaraan dapat menggunakan rentcar-rentcar murah terdekat yang terdapat di Tabanan.Disini juga terdapat air terjun mini, yang langsung menghadap ke pantai. Air terjun ini juga menambah keindahan dari pantai ini. Dan juga menjadi salah satu daya tarik bagi pengunjungnya.</string>
    <string name="tourism_detail_airpanasangseri">Objek wisata di Tabanan ini memang cukup populer sebagai tempat pemandian yang diminati warga untuk berendam dan merasakan hangat air panas dari alam, di Tabanan sendiri terdapat sejumlah sumber air panas dan di Angsari ini salah satunya menjadi tujuan yang cukup istimewa. Sebuah kolam renang untuk umum tersedia terletak di dasar kembah dekat sungai, tampak juga sebuah air terjun kecil dekat kolam pemandian tersebut, suasanya tenang dan nyaman. Jika anda ingin tempat yang lebih pribadi untuk berendam, tersedia juga bilik-bilik kecil yang bisa anda sewa. Pemandian air panas di Angseri ini terlihat cantik berikut kebun-kebun tertata rapi. Untuk mencapai lokasi anda butuh berjalan kaki sekitar 200 meter, melewati jalan setapak serta melintasi areal sawah terasering yang tersaji indah dan menawan. Agendakan tour di Bali anda sekarang ke Angseri ini.</string>
    <string name="tourism_detail_airterjunblahmantung">Objek wisata air terjun Blahmantung ini terletak di desa Pujungan, Pupuan, Tabanan. Air terjun ini cukup tinggi sekitar 50 meter, walaupun debit airnya tidak begitu besar pada musim kemarau, tetapi keindahan alam seperti ini sangat jarang bisa anda temukan, terutama di wilayah Kabupaten Tabanan, airnya terjun diantara tebing tinggi, terletak tersembunyi dan jauh dari keramaian. Di bawah air terjun tersebut terdapat kolam alami yang bisa anda gunakan sebagai tempat berendam ataupun mandi merasakan segarnya air pegunungan. Objek wisata di Tabanan ini sangat ideal untuk tujuan tour di Bali, terutama anda yang suka kegiatan trekking, apalagi kawasan Pupuan terkenal dengan pemandangan sawahnya yang indah, sehingga air terjun Blahmantung di Tabanan ini akan menjadi tujuan wisata yang ideal berikutnya.</string>
    <string name="tourism_detail_airterjunyehho">Salah satu tempat yang tergolong wisata baru di Bali tepatnya di daerah Jatiluwih, Tabanan adalah wisata Air Terjun Yeh. Air terjun Yeh adalah sebuah wisata yang terletak di sekitar hamparan sawah indah dan berada di atas ketinggian 700 meter di atas permukaan laut dan berdekatan pula dengan gunung Batukaru. Karena berdekatan dengan gunung, maka suasana di tempat ini serasa sangat indah, sejuk, tenang dan membuat siapa saja betah berlama-lama di sini. Namun sayangnya masih belum banyak yang mengetahui keindahan Air Terjun Yeh di Jatiluwih ini.</string>
    <string name="tourism_detail_danauberatan">Danau Bratan adalah sebuah danau yang terletak di kawasan Bedugul, Desa Candikuning, Kecamatan Baturiti, Kabupaten Tabanan, Bali. Danau yang terletak paling timur di antara dua danau lainnya yaitu Danau Tamblingan dan Danau Buyan, yang merupakan gugusan danau kembar di dalam sebuah kaldera besar, Danau Bratan terbilang cukup istimewa.  Berada di jalur jalan provinsi yang menghubungkan Denpasar-Singaraja serta letaknya yang dekat dengan Kebun Raya Eka Karya menjadikan tempat ini menjadi salah satu andalan wisata pulau Bali. Disamping mudah dijangkau Danau Bratan juga menyediakan beragam pesona dan akomodasi yang memadai.  Di tengah danau terdapat sebuah pura yaitu Pura Ulun Danu, yang merupakan tempat pemujaan kepada Sang Hyang Dewi Danu sebagai pemberi kesuburan.</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="text_name_about">Rai Saputra</string>
    <string name="toolbar_about">Tentang</string>
    <string name="text_email_about">mazolutionz@gmail.com</string>
    <string name="toolbar_location">Detail</string>
    <string name="detail_detail">Detail</string>
</resources>

